--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=ForoHub
+spring.datasource.url=jdbc:mysql://localhost/forohub
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.data.web.pageable.page-parameter=pagina
+spring.data.web.pageable.size-parameter=tamano
+spring.data.web.sort.sort-parameter=orden
+
+server.error.include-stacktrace=never
+
+api.security.secret=${JWT_SECRET}
